# calendar

./: .gitignore  README.md  TAURI_MIGRATION_PLAN.md  package-lock.json  package.json  tsconfig.main.json  vite.config.ts
html/: cc.html
resources/sql/: holiday-schema.sql
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/main/: index.ts
src/main/almanac/: almanacService.ts
src/main/holiday/: holidayRepository.ts  holidayService.ts  providers.ts
src/preload/: index.ts
src/renderer/: index.html
src/renderer/src/: global.d.ts  main.tsx  styles.css
src/renderer/src/api/: desktop.ts
src/shared/almanac/: types.ts
src/shared/clock/: types.ts
src/shared/holiday/: types.ts
